# pilotproject-frisperwhisper

./: .gitignore  README.md  README_fine-tuning.md  finetune_crisperwhisper.ipynb  pyproject.toml  requirements.txt  resample44k16k.py  run_dataset_preprocess_batch_full.sbatch  run_dataset_preprocess_batch_test.sbatch  run_finetuning_example.sh  test_intervals.csv
FrisperWhisper/: README.md
FrisperWhisper/test-inter/runs/Aug20_15-00-06_gx11/: events.out.tfevents.1755694831.gx11.352345.0
FrisperWhisper/test-inter/runs/Aug20_15-03-25_gx11/: events.out.tfevents.1755695007.gx11.357118.0
FrisperWhisper/test-inter/runs/Aug20_15-55-27_gx11/: events.out.tfevents.1755698128.gx11.3587372.0
FrisperWhisper/test-inter/runs/Aug20_15-58-26_gx11/: events.out.tfevents.1755698308.gx11.577477.0
crisper-whisper-hi/runs/Jun16_13-32-52_rzb/: events.out.tfevents.1750073598.rzb.93154.0
crisper-whisper-hi/runs/Jun16_13-34-21_rzb/: events.out.tfevents.1750073670.rzb.93154.1
crisper-whisper-hi/runs/Jun16_13-35-10_rzb/: events.out.tfevents.1750073716.rzb.93154.2
crisper-whisper-hi/runs/Jun16_13-35-35_rzb/: events.out.tfevents.1750073741.rzb.93154.3
crisper-whisper-hi/runs/Jun16_13-36-03_rzb/: events.out.tfevents.1750073768.rzb.93154.4
data_sample/: a040a.TextGrid  a040a.trs  a078a.TextGrid  a078a.trs
scripts/: .nfs39e55aee0ee65ce9000173ce  DataSetSubsampling.py  Dataset2LogMelSpec.py  TextGrids2Dataset.py  TextGrids2DatasetDebug.py  Textgrids2DatasetBatch.py  Textgrids2DatasetBatchFull.py  clean_TextGrids.py  create_dataset.sbatch  extract_empty_intervals_and_overlaps.py  finetune_whisper.py  finetune_whisper_HF.py  finetune_whisper_HF_debug.py  finetune_whisper_HF_gpu.py  finetune_whisper_from_LogMEL.py  finetune_whisper_gpu.py  populate_csv_with_empty_intervals.py  preprocess_dataset.sbatch  resample44k16k.py  resample44k16k.sbatch  run_dataset_preprocess_batch.sbatch  run_distributed_training.sh  run_whisper_comparison.py  run_whisper_comparison.sbatch  run_whisper_comparison_all.py  run_whisper_comparison_all.sbatch  run_whisper_comparison_all_v2.py  run_whisper_comparison_eslo.sbatch  run_whisper_comparison_pipeline.py  stt_crisperwhisper.py  tensorboard_visualise_runs.py  test_crisperwhisper.py  test_full_pipeline_gpu.sh  train_whisper.sbatch  train_whisper_HF_gpu.sbatch  train_whisper_gpu.sbatch  train_whisper_gpu_batch_optimized.sbatch  train_whisper_gpu_multinode.sbatch  transcribe_with_finetuned.py  transformTextgrids2LangAgeFormat.py  (+3 more)
scripts/modules/: __init__.py  clean_TextGrids.py  metadata_extraction.py  metrics_calculation.py  metrics_calculation_all.py  speaker_mapping.py  transcription.py
test_training_v3/runs/Sep01_14-29-52_gx10/: events.out.tfevents.1756729793.gx10.277980.0
test_whisper_large_v3/runs/Aug25_15-37-33_gx10/: events.out.tfevents.1756129056.gx10.2147927.0
tts_langage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
